added my plugins to the plugin directory

--- a/docs/docs/plugins/directory.mdx
+++ b/docs/docs/plugins/directory.mdx
@@ -64,9 +64,19 @@ Innovative plugins crafted by the creative **[Robo.js Community](https://robopla
 		description="Create your own user profile on a discord server and share it. Allow anyone to do the same."
 	/>
 	<Card
-		href="https://www.npmjs.com/package/economy-plugin"
-		title="🔗 Economy"
-		description="The Economy Plugin encompasses essential commands for a basic economy bot. Data storage is managed via Flashcore. provide goals like purchasing roles to customize names or prioritizing display in user lists. Its a great way to get people engaged with the community Everything is customizable!"
+		href="https://www.npmjs.com/package/robo-welcome-message-plugin"
+		title="🔗 Welcome Messages"
+		description="Add Awesome customisable welcome message's to your robo with the ablity to add a custom image that the users profile picture is added on top of then sent in the embed welcome."
+	/>
+		<Card
+		href="https://www.npmjs.com/package/ez-modals"
+		title="🔗 EZ-Modals"
+		description="Arnt modals just a pain why not simplify it to a bit of config and a calling the function! simple as."
+	/>
+		<Card
+		href="https://www.npmjs.com/package/fun-functions"
+		title="🔗 Fun Functions"
+		description="Just a few simple fun commands and there functions you can use for nay function you want! Plans to add more are in the works."
 	/>
 	<Card
 		href="https://www.npmjs.com/package/emoji-reaction-plugin"
